// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton component should match snapshot 1`] = `
<div>
  <div
    class="css-1hkki4g-Skeleton"
  />
</div>
`;

exports[`Skeleton component should match snapshot with custom props 1`] = `
<div>
  <div
    class="css-1gn4cze-Skeleton"
  />
</div>
`;
